PI-409: Feature/pi 409 pi 524 backend for contracts UI (#48)
* PI-409, PI-524: Extend backend for contract agreement retrieval

* Revert minor change

* PI-409, PI-524: Add tests in backend

* PI-409, PI-524: Adjust TOs

* PI-409, PI-524: Add todo

* PI-409, PI-524: Remove todo

* PI-409, PI-524: Generate typescript TOs and API calls

* Adapt test

* PI-409, PI-524: Get all assets in single call

* Rename mocks to fakes