@@ -1,15 +1,13 @@
 package eu.possiblex.participantportal.business.control;
 
+import eu.possiblex.participantportal.business.entity.AcceptOfferResponseBE;
 import eu.possiblex.participantportal.business.entity.ConsumeOfferRequestBE;
 import eu.possiblex.participantportal.business.entity.SelectOfferRequestBE;
 import eu.possiblex.participantportal.business.entity.SelectOfferResponseBE;
-import eu.possiblex.participantportal.business.entity.AcceptOfferResponseBE;
 import eu.possiblex.participantportal.business.entity.edc.catalog.DcatDataset;
-import eu.possiblex.participantportal.business.entity.edc.policy.Policy;
-import eu.possiblex.participantportal.business.entity.edc.transfer.IonosS3TransferProcess;
-import eu.possiblex.participantportal.business.entity.edc.transfer.TransferProcess;
-import eu.possiblex.participantportal.business.entity.edc.transfer.TransferProcessState;
 import eu.possiblex.participantportal.business.entity.edc.negotiation.NegotiationState;
+import eu.possiblex.participantportal.business.entity.edc.policy.Policy;
+import eu.possiblex.participantportal.business.entity.edc.transfer.TransferProcessState;
 import eu.possiblex.participantportal.business.entity.exception.NegotiationFailedException;
 import eu.possiblex.participantportal.business.entity.exception.OfferNotFoundException;
 import eu.possiblex.participantportal.business.entity.exception.TransferFailedException;
@@ -17,7 +15,7 @@ import eu.possiblex.participantportal.business.entity.exception.TransferFailedEx
 import java.util.Collections;
 import java.util.List;
 
-public class ConsumerServiceMock implements ConsumerService {
+public class ConsumerServiceFake implements ConsumerService {
 
     public static final String VALID_FH_OFFER_ID = "validFhCatalogOfferId";
 
@@ -36,24 +34,14 @@ public class ConsumerServiceMock implements ConsumerService {
     @Override
     public SelectOfferResponseBE selectContractOffer(SelectOfferRequestBE request) throws OfferNotFoundException {
 
-        if(request.getFhCatalogOfferId().equals(MISSING_OFFER_ID)) {
+        if (request.getFhCatalogOfferId().equals(MISSING_OFFER_ID)) {
             throw new OfferNotFoundException("not found");
         }
 
-        DcatDataset edcCatalogOfferMock = DcatDataset
-            .builder()
-            .assetId(VALID_ASSET_ID)
-            .name("some name")
-            .description("some description")
-            .version("v1.2.3")
-            .contenttype("application/json")
-            .hasPolicy(List.of(Policy
-                .builder()
-                .permission(Collections.emptyList())
-                .prohibition(Collections.emptyList())
-                .obligation(Collections.emptyList())
-                .build()))
-            .build();
+        DcatDataset edcCatalogOfferMock = DcatDataset.builder().assetId(VALID_ASSET_ID).name("some name")
+            .description("some description").version("v1.2.3").contenttype("application/json").hasPolicy(List.of(
+                Policy.builder().permission(Collections.emptyList()).prohibition(Collections.emptyList())
+                    .obligation(Collections.emptyList()).build())).build();
 
         SelectOfferResponseBE response = new SelectOfferResponseBE();
         response.setEdcOffer(edcCatalogOfferMock);
@@ -70,7 +58,8 @@ public class ConsumerServiceMock implements ConsumerService {
             case MISSING_OFFER_ID -> throw new OfferNotFoundException("not found");
             case BAD_EDC_OFFER_ID -> throw new NegotiationFailedException("negotiation failed");
             case BAD_TRANSFER_OFFER_ID -> throw new TransferFailedException("transfer failed");
-            default -> AcceptOfferResponseBE.builder().transferProcessState(TransferProcessState.COMPLETED).negotiationState(NegotiationState.FINALIZED).dataOffering(true).build();
+            default -> AcceptOfferResponseBE.builder().transferProcessState(TransferProcessState.COMPLETED)
+                .negotiationState(NegotiationState.FINALIZED).dataOffering(true).build();
             //IonosS3TransferProcess.builder().state(TransferProcessState.COMPLETED).build();
         };
 
